--- a/Android/app/src/main/res/layout/component_advantage_picker.xml
+++ b/Android/app/src/main/res/layout/component_advantage_picker.xml
@@ -11,12 +11,10 @@
         android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/padding_normal"
-        android:layout_marginTop="@dimen/padding_small"
         android:text="@string/label_advantage"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Proficiency" />
 
     <RadioGroup
         android:id="@+id/group"
@@ -27,51 +25,24 @@
         app:layout_constraintTop_toBottomOf="@id/label">
 
         <com.google.android.material.radiobutton.MaterialRadioButton
-            android:id="@+id/hasNoAdvantage"
+            android:id="@+id/none"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_small"
-            android:layout_marginVertical="@dimen/padding_normal"
             android:layout_weight="1"
-            android:background="@drawable/radio_button_selector"
-            android:button="@android:color/transparent"
-            android:gravity="center"
-            android:padding="@dimen/padding_normal"
-            android:text="@string/label_advantage_none"
-            android:textAppearance="@android:style/TextAppearance.Material.Button"
-            android:textColor="@color/radio_button_text"
-            tools:checked="true" />
+            android:text="@string/label_advantage_none" />
 
         <com.google.android.material.radiobutton.MaterialRadioButton
-            android:id="@+id/hasAdvantage"
+            android:id="@+id/advantage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_small"
-            android:layout_marginVertical="@dimen/padding_normal"
             android:layout_weight="1"
-            android:background="@drawable/radio_button_selector"
-            android:button="@android:color/transparent"
-            android:gravity="center"
-            android:padding="@dimen/padding_normal"
-            android:text="@string/label_advantage_advantage"
-            android:textAppearance="@android:style/TextAppearance.Material.Button"
-            android:textColor="@color/radio_button_text"
-            tools:checked="false" />
+            android:text="@string/label_advantage_advantage" />
 
         <com.google.android.material.radiobutton.MaterialRadioButton
-            android:id="@+id/hasDisadvantage"
+            android:id="@+id/disadvantage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_small"
-            android:layout_marginVertical="@dimen/padding_normal"
             android:layout_weight="1"
-            android:background="@drawable/radio_button_selector"
-            android:button="@android:color/transparent"
-            android:gravity="center"
-            android:padding="@dimen/padding_normal"
-            android:text="@string/label_advantage_disadvantage"
-            android:textAppearance="@android:style/TextAppearance.Material.Button"
-            android:textColor="@color/radio_button_text"
-            tools:checked="false" />
+            android:text="@string/label_advantage_disadvantage" />
     </RadioGroup>
 </merge>
