--- a/Android/app/src/main/res/layout/component_proficiency_picker.xml
+++ b/Android/app/src/main/res/layout/component_proficiency_picker.xml
@@ -11,12 +11,10 @@
         android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/padding_normal"
-        android:layout_marginTop="@dimen/padding_small"
         android:text="@string/label_proficiency"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Proficiency" />
 
     <RadioGroup
         android:id="@+id/group"
@@ -30,48 +28,21 @@
             android:id="@+id/none"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_small"
-            android:layout_marginVertical="@dimen/padding_normal"
             android:layout_weight="1"
-            android:background="@drawable/radio_button_selector"
-            android:button="@android:color/transparent"
-            android:gravity="center"
-            android:padding="@dimen/padding_normal"
-            android:text="@string/label_proficiency_none"
-            android:textAppearance="@android:style/TextAppearance.Material.Button"
-            android:textColor="@color/radio_button_text"
-            tools:checked="true" />
+            android:text="@string/label_proficiency_none" />
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/proficient"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_small"
-            android:layout_marginVertical="@dimen/padding_normal"
             android:layout_weight="1"
-            android:background="@drawable/radio_button_selector"
-            android:button="@android:color/transparent"
-            android:gravity="center"
-            android:padding="@dimen/padding_normal"
-            android:text="@string/label_proficiency_proficient"
-            android:textAppearance="@android:style/TextAppearance.Material.Button"
-            android:textColor="@color/radio_button_text"
-            tools:checked="false" />
+            android:text="@string/label_proficiency_proficient" />
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/expertise"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_small"
-            android:layout_marginVertical="@dimen/padding_normal"
             android:layout_weight="1"
-            android:background="@drawable/radio_button_selector"
-            android:button="@android:color/transparent"
-            android:gravity="center"
-            android:padding="@dimen/padding_normal"
-            android:text="@string/label_proficiency_expertise"
-            android:textAppearance="@android:style/TextAppearance.Material.Button"
-            android:textColor="@color/radio_button_text"
-            tools:checked="false" />
+            android:text="@string/label_proficiency_expertise" />
     </RadioGroup>
 </merge>
